Commented out floatrow and used float instead.
Compiled successfully.

--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -5,7 +5,7 @@
 \usepackage{amssymb}
 \usepackage{booktabs}
 \usepackage{float}
-\usepackage{floatrow}
+%\usepackage{floatrow}
 \usepackage{graphicx}
 \usepackage{import}
 \usepackage{mathtools}
