--- a/nate-am-review/SectionIII/AlloyDesign.tex
+++ b/nate-am-review/SectionIII/AlloyDesign.tex
@@ -1,4 +1,10 @@
 \subsubsection{Alloy Design}
+
+\begin{figure*}
+	\includegraphics[width=1\linewidth]{Images/AlloyDesign}
+	\caption{An illustration of the alloy design process using a genetic algorithm. First, a target property $P_\text{target}$ and an evaluation method $f(\mathbf{X})$ for the alloy $\mathbf{X}$ are chosen. The evaluation method is most often a material modeling approach that can predict material properties based on composition. Then, a population of starting compositions are made. The model is run for each composition and an associated material property is measured. The predicted values are compared against the target value. If no material matches the target, then the genetic algorithm begins. The closest-matching compositions are selected to create a child generation. Crossover and mutation occurs for those compositions which were selected. In this way, a new population of compositions are created that are similar to the best-performing compositions from the previous generation. Model assessment and the genetic algorithm are then run again until a composition is found that meets the target property value.}
+	\label{fig:GA}
+\end{figure*}
 Choice of alloy impacts the physics of AM from start to finish, starting with the optics of energy sources incident on feedstock and ending with the material properties of the final part. For example, the reflected/absorbed intensity of lasers on powder beds is determined by the powder's composition \cite{Boley2016, Trapp2017}. The density of feedstock, both intra- and inter-granular density, plays a role in final part density \cite{Bi2013}. Conduction modes in the melt are partially determined by the thermal properties of the alloy \cite{Martin2017}. All of this is not to mention that different alloys exhibit different solidification kinetics, which can lead to drastically different microstructures after manufacture \cite{Collins2016}. 
 
 Problems in the additive process can also be linked to composition such as vaporization of constituent elements due to rapid thermal fluxes, impacting the stoichiometry of melt pools and, ultimately, quality \cite{Brice2018}. Traditional engineering alloys sometimes need to be altered to improve compatibility with AM. Searching for new alloys specifically for AM may also be fruitful, as unique strengthening mechanisms can arise \cite{Brice2018, Wang2017}. Designing alloys for AM -- either altering currently used alloys or starting from scratch -- requires taking into consideration the compatibility of alloys' physical properties with AM. Alloy design for AM must take into consideration general alloy properties, like melting point, to feedstock-level properties, like vaporization temperature, to bulk alloy properties, like strength. Much of this information has been collated into databases that are compatible with design for AM. Alloy designers from AM should take advantage of these databases to search for new alloys for use in additive. 
@@ -13,15 +19,13 @@ A limiting factor in database mining is that designers are limited to properties
 
 Modeling all possible combinations of $\{\text{Ti},\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ is possible with coarse additions of alloying elements, but undesirable. Machine learning can aid in the process to find an optimal composition without modeling all possibilities. \textit{Genetic alogrithms} (GA) can search the space of possible alloys to find the optimal dendrite arm spacing. Genetic algorithms have been one of the most-used data driven approaches in materials science over the past few decades \cite{Morris1996, Ho1998, Wolf2000, Johannesson2002, Stucke2003, Hart2005, Oganov2006}.
 
-%
-\begin{figure}[h!]
-	\includegraphics[width=1\linewidth]{Images/AlloyDesign}
-	\caption{An illustrator of genetic algorithm selection, mutation, and crossover for alloy design. As the algorithm proceeds, the selection step typically focuses in on a local minimum of `best' alloys for the intended outcome/application. The model assessment, or selection, step can vary depending on the alloy property being optimized. The model used should be able to predict material response based on composition.}
-	\label{fig:GA}
-\end{figure}
-%
+The principle of genetic algorithms is to evaluate the \textit{fitness} of a population of candidate alloys against a \textit{fitness function}. The fitness function is a method of evaluating how well a candidate alloy meets a criteria. Often in materials science the fitness function is evaluated by running models that can measure a material property based on composition. Examples include identifying stable crystal structure of a composition using DFT, evaluating thermomechanical properties of an alloy using ThermoCalc, determining strength of a material using a finite element method, and more. As long as a model can measure relevant properties based on composition it can be used in a genetic algorithm for alloy design.
 
-The principle of genetic algorithms is to evaluate the \textit{fitness} of a population of candidate alloys against a \textit{fitness function}. The fitness function is a method of evaluating how well a candidate alloy meets a criteria.
+Ideally, materials engineers have a desired target property value in mind, whether it is a desired coefficient of thermal expansion, desired elastic modulus, hardness, etc. This value $P_\text{target}$ should be a function of composition. Additionally, engineers also need a method of measuring what a material's property value is based on composition $\mathbf{X}$; the models proposed previously (ThermoCalc, DFT, etc.) can serve as the evaluation step $f(\mathbf{X})$. The goal is to find a material whose measured property closest matches the desired target property, or
+\begin{equation}
+	\text{min} || f(\mathbf{X}) - P_\text{target} ||.
+	\label{GAopt}
+\end{equation}
 
 As a thought experiment, consider using the CALculation of PHase Diagrams (CALPHAD) method as a fitness function. It can be run for candidate compositions -- in this case, various amounts of $\{\text{Al}, \text{V}, \text{Zr}, \text{Cr}\}$ alloyed into Ti -- and used to evaluate its compatibility with rapid solidification. This is similar to a study completed in \cite{Li2017}. Once a fitness function has been identified, the next step in a genetic algorithm is to represent candidate alloys as a \textit{gene}. 
 
@@ -30,9 +34,10 @@ We can represent a gene as \\
 % You must have an empty line between text and the start of a table for some reason -- this is definitely going to be a problem later
 \begin{table}[h!]
 \begin{tabular}{cccccc}
-	Alloy & $=$ & [$\chi_1$, & $\chi_2$, & $\ldots$, & $\chi_n$] \\
+	$\mathbf{X}$ & $=$ & [$\chi_1$, & $\chi_2$, & $\ldots$, & $\chi_n$] \\
 \end{tabular}
 \end{table}
+\noindent 
 where $\chi_1$ is the species and weight percent of the first element (titanium, in this example), $\chi_2$ is the species and weight percent of the second element, up to $n$ elements. For example, Ti-6Al-4V would be represented as \\
 
 \begin{table}[h!]
@@ -40,6 +45,7 @@ where $\chi_1$ is the species and weight percent of the first element (titanium,
 	 [0.9 Ti,  & 0.06 Al, & 0.04 V ] \\
 \end{tabular}
 \end{table}
+\noindent
 The goal is to find the alloy with optimal dendrite arm spacing. First, a population of candidate genes needs to be generated, either randomly or by design. Two examples from a starting population may be \\
 
 \begin{table}[h!]
@@ -50,6 +56,7 @@ The goal is to find the alloy with optimal dendrite arm spacing. First, a popula
 \end{tabular}
 \end{center}
 \end{table}
+\noindent
 The thermodynamic properties of the various compositions, and therefore their compatibility with AM, is estimated by running a CALPHAD model for each composition. It is not guaranteed that the optimal composition is in this starting population.
 
 Genetic algorithms select genes out of the current population -- called the parent generation --  to proceed to another generation of model assessment -- called the child generation. Selection consists of keeping the best performing compositions, say the top $10\%$, and discarding the rest. Genetic algorithms find optimal locations in the design space by relying on the similarity hypothesis. If one alloy is in the top $10\%$ of genes then it is possible that a similar alloy will also be high performing -- it may be even perform better. Once selection is done, the next step is to search the space near the best performing alloys from the parent generation.
